samples/_failures_safe/1761171016_3cab2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_915957b0.c: In function ‘main’:
./samples/SAFE/__tmp_915957b0.c:159:27: error: expected ‘;’ at end of input
  159 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_915957b0.c:159:21: error: expected declaration or statement at end of input
  159 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_915957b0.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_915957b0.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_915957b0.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_915957b0.c:159:21: error: expected declaration or statement at end of input
